tests/test_data/CodeStructureSnippets/bad/sem_err_5.8.ifj21
require "ifj21"

function foo(x : integer, y : string) : integer, integer
  local i : integer = 1
  local j : integer = 2

  return i, j           --bad navratovy typ
end

--main
function main()
    foo(1)
end
main()